--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "twitter-api-v2": "^1.19.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
